--- a/pagina2.html
+++ b/pagina2.html
@@ -8,7 +8,7 @@ table, th, td {
 <body>
 
 <h2>Formula 1</h2>
-<a href="paginahome.html">Volte para o inicio</a>
+<a href="index.html">Volte para o inicio</a>
 <br/>
 <br/>
 <table style="width:15%">
